--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>3.8.3_462</version>
+			<version>4.ALPHA.0_70</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.firebase</groupId>
