Add botlist poster api

--- a/_config.properties
+++ b/_config.properties
@@ -6,3 +6,6 @@ GOOGLE_API_KEY: INSERT_HERE
 
 # A Firebase service account file hosted on this URL
 FIREBASE_CREDENTIALS_URL: INSERT_HERE
+
+# discordbots.org api token
+DBL_TOKEN: INSERT_HERE
