Implement voting again if they vote for the bot!

--- a/_config.properties
+++ b/_config.properties
@@ -9,3 +9,9 @@ FIREBASE_CREDENTIALS_URL: INSERT_HERE
 
 # discordbots.org api token
 DBL_TOKEN: INSERT_HERE
+
+# discordbots.org webhook secret
+DBL_SECRET: INSERT_HERE
+
+# Webhook Port
+WEBHOOK_PORT: INSERT_HERE
