--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,10 @@
 			<artifactId>fastutil</artifactId>
 			<version>8.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.4.9.v20180320</version>
+		</dependency>
 	</dependencies>
 </project>
