--- a/pom.xml
+++ b/pom.xml
@@ -80,9 +80,14 @@
 			<version>8.2.2</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.4.15.v20190215</version>
+			<version>9.4.18.v20190429</version>
 		</dependency>
 	</dependencies>
 </project>
